--- a/client/package.json
+++ b/client/package.json
@@ -4,13 +4,13 @@
   "private": true,
   "dependencies": {
     "axios": "^0.21.1",
-    "cra-template": "1.0.3",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "cra-template": "^1.0.3",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
-    "react-transition-group": "^4.4.1",
-    "uuid": "^8.3.0"
+    "react-scripts": "^3.4.1",
+    "react-transition-group": "^4.4.2",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
